# kurs-forskningskvelden

./: .gitignore  00_intro.ipynb  01_losninger_nybegynner.ipynb  01_nybegynner.ipynb  01_nybegynner_losninger.ipynb  02_losninger_nybegynner.ipynb  02_plotting.ipynb  03_kart.ipynb  04_outro.ipynb  05_bonus_pygame.ipynb  README.md  SECURITY.md  pygame_forsok.py  pyproject.toml
data/: valg_2019_18_19aar.csv  valgdeltakelse.csv
