[tool.poetry]
name = "kurs-forskningskvelden"
version = "0.0.1"
description = "Notebooks og data for kurs arrangert av SSB på Forskningskvelden 29. september arrangert av Høgskolesenteret i Kongsvinger (HIK)"
authors = ["Carl Corneil <cfc@ssb.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.5.3"
plotly = "^5.15.0"
ipykernel = "^6.25.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

